# CodeWalker

./: .gitignore  README.md  build.gradle.kts  rules.pro  settings.gradle.kts
src/main/core/: Cargo.toml
src/main/core/rsc/: langs-color-map.txt
src/main/core/src/: colors.rs  database.rs  jni_utils.rs  lib.rs  models.rs  util.rs
src/main/core/src/tokei/: Cargo.toml  README.md
src/main/core/src/tokei/src/language/: language_type.rs
src/main/kotlin/me/sudodios/codewalker/: CodeWalker.kt
src/main/kotlin/me/sudodios/codewalker/core/: Global.kt  LibCore.kt
src/main/kotlin/me/sudodios/codewalker/models/: ModelLangStats.kt  ModelStatistics.kt
src/main/kotlin/me/sudodios/codewalker/ui/: Routes.kt
src/main/kotlin/me/sudodios/codewalker/ui/components/: CBox.kt  CustomModifiers.kt  Dot.kt  GradientButton.kt  LanguagesChart.kt  MyIconButton.kt  SortTypeSwitch.kt  TabSwitcher.kt  TooltipC.kt  Txt.kt  TxtField.kt
src/main/kotlin/me/sudodios/codewalker/ui/components/menu/: CustomPopup.kt  SortMenu.kt
src/main/kotlin/me/sudodios/codewalker/ui/dialogs/: AddPatternDialog.kt  BaseDialog.kt  CreateProjectDialog.kt  DeleteDialog.kt  FolderPickerDialog.kt
src/main/kotlin/me/sudodios/codewalker/ui/scenes/: MainScreen.kt  SplashScreen.kt
src/main/kotlin/me/sudodios/codewalker/ui/scenes/sections/: Drawer.kt
src/main/kotlin/me/sudodios/codewalker/ui/theme/: AppRippleTheme.kt  ColorTheme.kt  Fonts.kt
src/main/kotlin/me/sudodios/codewalker/utils/: GsonUtils.kt  Utils.kt
