workspace = { members = ["src/tokei"] }
[package]
name = "core_code_walker"
version = "1.0.0-a"
edition = "2021"

[lib]
name = "core_code_walker"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
tokei = {path = "src/tokei"}
fs_extra = "1.3.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
